--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.13.1",
+    "gsap": "^3.14.2",
     "leaflet": "^1.9.4",
     "next": "16.1.1",
     "qrcode.react": "^4.2.0",
